fix: created project base

--- a/craft_vibe/.env.example
+++ b/craft_vibe/.env.example
@@ -3,3 +3,6 @@ USER_DB="db_user"
 PASS_DB=password
 HOST_DB=db_host
 PORT_DB=db_port
+SECRET_KEY='secret-key'
+DEBUG=Bool
+ALLOWED_HOSTS='domain-name localhost ip etc'
