--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-debug-toolbar-force==0.2
 django-environ==0.11.2
 django-filter==24.2
 django-nine==0.2.7
+django-phonenumber-field==7.3.0
 django-templated-mail==1.1.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
